--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "mysql2": "^1.4.1",
     "path": "^0.12.7",
     "sequelize": "^4.5.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.1",
+    "mocha": "^3.5.0"
   }
 }
