--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "chai": "^4.1.1",
     "mocha": "^3.5.0",
-    "nightmare": "^2.10.0"
+    "nightmare": "^2.10.0",
+    "nightmare-wait-for-url": "0.0.2"
   }
 }
